# futbol-wc2026-predictor

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/dashboard/: app.py
data/reference/: confederations.csv  wc2026_fixtures.csv
docs/: dashboard.md  data_sources.md  database_schema.md  evaluation.md  methodology.md  modeling.md  roadmap.md  runbooks.md
scripts/: __init__.py  daily_update.sh  update.py
scripts/etl/: build_wc_fixtures.py  init_db.py  load_intl_results.py  make_sample_data.py  merge_duplicate_teams.py  populate_confederations.py  pull_fixtures.py  pull_open_results.py
scripts/evaluation/: backtest.py  recency_impact.py  recency_sweep.py  wc_holdout.py
scripts/features/: build_features.py
scripts/modeling/: predict.py  train_dixon_coles.py
src/clients/: base.py  football_data.py  open_results.py  types.py
src/config/: settings.py
src/dashboards/: queries.py
src/evaluation/: devig.py  metrics.py
src/explain/: __init__.py  reasons.py
src/features/: build.py
src/models/: calibration.py  dixon_coles.py  elo.py  scoreline.py
src/storage/: dao.py  database.py  schema.sql
src/utils/: logging.py  naming.py
tests/: test_build_wc_fixtures.py  test_confederation.py  test_dashboard_queries.py  test_etl.py  test_evaluation.py  test_explain.py  test_features.py  test_football_data.py  test_merge_teams.py  test_min_matches.py  test_models.py  test_open_results.py  test_schema.py  test_tournament_weight.py
