[project]
name = "worldcup-forecast"
version = "0.1.0"
description = "Calibrated pre-match probability forecasts for the FIFA World Cup, benchmarked vs market and Opta."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "tenacity>=8.2",
    "structlog>=24.1",
]

[project.optional-dependencies]
# Optional, source-gated enrichment (heavier / scrape-fragile). Not required to run
# the core pipeline end-to-end on historical/sample data.
xg = ["soccerdata>=1.8"]
dashboard = ["streamlit>=1.33", "plotly>=5.20"]
dev = ["pytest>=8.1", "ruff>=0.3", "mypy>=1.9"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
